--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
     <section class="contact-us">
             <div class="row">
                 <div class="contact-col-form">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScgNe7seLTDl7re72JDPyiPO_s5HQM31LOlC535neJjtuuqQg/viewform?embedded=true" width="750" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                  </div>
+                    <iframe class="src" src="https://docs.google.com/forms/d/e/1FAIpQLScgNe7seLTDl7re72JDPyiPO_s5HQM31LOlC535neJjtuuqQg/viewform?embedded=true" width="750" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                 
+                 </div>
             </div>
     </section>
     
