--- a/design.html
+++ b/design.html
@@ -88,6 +88,11 @@
         navLinks.style.right = "-200px";
     }
 </script> 
+    <script>
+    document.getElementById("dropdownBtn").addEventListener("click", function() {
+        document.getElementById("dropdownContent").classList.toggle("show");
+    });
+    </script>
     
 </body>
 </html>    
