--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
+<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Crockett Construction </title>
 <link rel="stylesheet" href="style.css">
