--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,7 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <h3>Send Us A Message</h3>
-                    <form action="https://formspree.io/f/mgegprnp" method="POST">
-                        <div class="form-group">
+                    <form action="https://formsubmit.co/b18bd7236900187d09f8e2b21363a56d" method="POST">                        <div class="form-group">
                             <input type="text" name="name" placeholder="Your Name">
                         </div>
                         <div class="form-group">
@@ -51,6 +50,8 @@
                         <div class="form-group">
                             <textarea name="message" placeholder="Your Message"></textarea>
                         </div>
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_template" value="box">
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
