--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
                             <input type="email" name="email" placeholder="Your Email">
                         </div>
                         <div class="form-group">
+                            <input type="phone number" name="phone number" placeholder="Your Phone Number">
+                        </div>
+                        <div class="form-group">
                             <textarea name="message" placeholder="Your Message"></textarea>
                         </div>
                         <input type="hidden" name="_captcha" value="false">
