--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Crockett Construction</title>
+<title>About Us | Crockett Construction Bucyrus, OH</title>
+<meta name="description" content="Learn about Crockett Construction’s mission to serve Bucyrus, OH with expert roofing, siding, and gutter services.">
+<!-- optimized -->
+Crockett Construction</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -82,7 +85,7 @@
         navLinks.style.right = "-200px";
     }
 </script> 
-    <script>
+<script>
     document.getElementById("dropdownBtn").addEventListener("click", function() {
         document.getElementById("dropdownContent").classList.toggle("show");
     });
