--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
-<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon" sizes="16x16">
+<link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Crockett Construction </title>
+<title>Crockett Construction | Roofing, Siding & Gutters in Bucyrus, OH</title>
+<meta name="description" content="Top-rated roofing, siding, and gutter services in Bucyrus, OH. Crockett Construction protects your home with expert craftsmanship.">
+<!-- optimized -->
+Crockett Construction </title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
