--- a/roofing.html
+++ b/roofing.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-<meta name="description" content="Need expert roof repair in Bucyrus, OH? Crockett Construction provides reliable, affordable roofing solutions for homes in Crawford County.">
-<title>Crockett Construction | Roof Repair in Bucyrus, OH</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Roofing in Bucyrus, OH | Crockett Construction</title>
+<meta name="description" content="Reliable roofing installation and repair services in Bucyrus, OH. High-quality materials and expert workmanship.">
+<!-- optimized -->
+Crockett Construction</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
