--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Crockett Construction | Bucyrus, OH</title>
-<meta name="description" content="Get in touch with Crockett Construction in Bucyrus, OH. Roofing, siding, and gutter specialists ready to serve your needs.">
-<!-- optimized -->
-Crockett Construction</title>
+<title>Crockett Construction</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -27,6 +24,7 @@ Crockett Construction</title>
                         </div>
                     </li>
                     <li><a href="design.html">DESIGN YOUR DREAM HOME</a></li>
+                    <li><a href="roof-estimator.html">ROOF ESTIMATOR</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
