--- a/roofing.html
+++ b/roofing.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Roofing in Bucyrus, OH | Crockett Construction</title>
-<meta name="description" content="Reliable roofing installation and repair services in Bucyrus, OH. High-quality materials and expert workmanship.">
-<!-- optimized -->
-Crockett Construction</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Crockett Construction provides expert roof repair and installation in Bucyrus, OH. Trusted roofing contractors for homes across Crawford County.">
+  <title>Roof Repair in Bucyrus, OH | Crockett Construction</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
 </head>
 <body>
     <section class="sub-header">
@@ -27,12 +28,13 @@ Crockett Construction</title>
                         </div>
                     </li>
                     <li><a href="design.html">DESIGN YOUR DREAM HOME</a></li>
+                    <li><a href="roof-estimator.html">ROOF ESTIMATOR</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>Roofing</h1>
+            <h1>Roof Repair in Bucyrus, OH</h1>
     </section>
     
     
