--- a/services.html
+++ b/services.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Our Services | Roofing, Siding, Gutters | Crockett Construction</title>
-<meta name="description" content="Explore all our home improvement services in Bucyrus, OH. Roofing, siding, gutters, and more by Crockett Construction.">
-<!-- optimized -->
-Crockett Construction</title>
+<title>Crockett Construction</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -20,6 +17,7 @@ Crockett Construction</title>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="services.html">SERVICES</a></li>
                     <li><a href="design.html">DESIGN YOUR DREAM HOME</a></li>
+                    <li><a href="roof-estimator.html">ROOF ESTIMATOR</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
