--- a/roof-estimator.html
+++ b/roof-estimator.html
@@ -5,37 +5,38 @@
 <title>Crockett Construction | Roof Price Estimator</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/roof-estimator.css">
+
 <!-- Google Maps JavaScript API (replace YOUR_GOOGLE_MAPS_API_KEY) -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASWzFqaaoZ2kIo4qb9Xj4Tnsof8c6OnDY&libraries=places,drawing,geometry" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places,drawing,geometry" defer></script>
 <script src="assets/roof-estimator.js" defer></script>
 </head>
 <body>
 
 <section class="sub-header">
     <nav>
-            <a href="index.html"><img src="Images/logo.png"></a>
-            <div class="nav-links" id="navLinks">
-                <i class="fa fa-close" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li>
-                        <button id="dropdownBtn" class="dropdown-btn">SERVICES</button>
-                        <div id="dropdownContent" class="dropdown-content dropdown-content-services">
-                            <a href="roofing.html">Roofing</a>
-                            <a href="siding.html">Siding</a>
-                            <a href="gutters.html">Gutters</a>
-                        </div>
-                    </li>
-                    <li><a href="design.html">DESIGN YOUR DREAM HOME</a></li>
-                    <li><a href="roof-estimator.html">ROOF ESTIMATOR</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
-        </nav>
+        <a href="index.html"><img src="images/logo.png" alt="Crockett Construction"></a>
+        <div class="nav-links" id="navLinks">
+            <i class="fa fa-times" onclick="hideMenu()"></i>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li class="dropdown">
+                    <a href="services.html" class="dropbtn" id="dropdownBtn">SERVICES</a>
+                    <div class="dropdown-content" id="dropdownContent">
+                        <a href="roofing.html">Roofing</a>
+                        <a href="siding.html">Siding</a>
+                        <a href="gutters.html">Gutters</a>
+                        <a href="design.html">Design</a>
+                    </div>
+                </li>
+                <li><a href="roof-estimator.html">ROOF ESTIMATOR</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+    </nav>
     <h1>Roof Price Estimator</h1>
 </section>
 
@@ -114,7 +115,7 @@
         </div>
         <div class="estimator-actions" style="justify-content:flex-end; margin-top:10px;">
             <button id="estimateBtn" class="btn-cc">Calculate Price</button>
-            <button id="emailBtn" class="btn-cc secondary" disabled>Email Me &amp; Crockett Construction</button>
+            <!-- Email button removed; email is now sent automatically on calculate -->
         </div>
         <p class="estimator-muted" style="margin-top:8px;">
             This is a ballpark estimate. Final pricing depends on roof complexity, layers, decking, access, permits, and site conditions.
@@ -128,17 +129,20 @@
     <p>Quality roofing, siding, and gutters for our community.</p>
 </footer>
 
+<!-- Scripts for mobile menu & dropdown (match site) -->
 <script>
     var navLinks = document.getElementById("navLinks");
-    function showMenu() {{ navLinks.style.right = "0"; }}
-    function hideMenu() {{ navLinks.style.right = "-200px"; }}
+    function showMenu() { navLinks.style.right = "0"; }
+    function hideMenu() { navLinks.style.right = "-200px"; }
 </script>
 <script>
     var btn = document.getElementById("dropdownBtn");
-    if (btn) {{ btn.addEventListener("click", function() {{
-        var dd = document.getElementById("dropdownContent");
-        if (dd) dd.classList.toggle("show");
-    }}); }}
+    if (btn) {
+        btn.addEventListener("click", function() {
+            var dd = document.getElementById("dropdownContent");
+            if (dd) dd.classList.toggle("show");
+        });
+    }
 </script>
 
 </body>
