--- a/roof-estimator.html
+++ b/roof-estimator.html
@@ -15,7 +15,7 @@
 
 <section class="sub-header">
     <nav>
-        <a href="index.html"><img src="../images/logo.png" alt="Crockett Construction"></a>
+        <a href="index.html"><img src="../Images/logo.png" alt="Crockett Construction"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
